2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* PyBinding.mdp: Don't require a specific version of Mono.Addins.

2008-12-08  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* PyBinding.Gui/PythonEditorIndentation.cs: Completing r121006 (track
	API changes to fix the build).

	* PyBinding.Gui/PythonEditorOutline.cs: Completing r121006 (track API
	changes to fix the build). Spaces to tabs.

2008-12-08  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* PyBinding.Gui/PythonEditorIndentation.cs: Track API changes (fixes
	build).

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile:
	* PyBinding.mdp:
	* AssemblyInfo.cs:
	* PyBinding.addin.xml:
	* Resources/PyBinding.addin.xml: Add AssemblyInfo.cs files that are
	autogenerated from the addin manifests.

2008-11-20  Lluis Sanchez Gual  <lluis@novell.com>

	* PyBinding.mdp: Set changelog policy.

	* PyBinding/PythonProject.cs: Allow executing the project.

	* gtk-gui/gui.stetic:
	* gtk-gui/PyBinding.Gui.PythonOptionsWidget.cs: Flush.
